--- a/compose.yml
+++ b/compose.yml
@@ -18,3 +18,11 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./src:/var/www/html
+  postgres:
+    image: postgres:16.4-alpine3.20
+    volumes:
+      - ./docker/entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    environment:
+      - POSTGRES_PASSWORD=password
+    ports:
+      - 5432:5432
